force-app/main/default/objects/Contract/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>RUBX-20 Unique ID Number &quot;Would need this to be able to clearly identify we are working with the correct Account&quot;</description>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>