force-app/main/default/objects/Contract/fields/Active__c.field-meta.xml
<CustomField>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>