force-app/main/default/objects/Contract/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>RUBX-1173 ACV DATA POINT</description>
    <label>ACV</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>