force-app/main/default/objects/Contract/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RUBX-33 Bill to Address related to account</description>
    <label>Bill To Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>