force-app/main/default/objects/Contract/fields/Contract_Migration_External_ID__c.field-meta.xml
<CustomField>
        <fullName>Contract_Migration_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A unique identifier for a record migrated from an external system.</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique identifier for a record migrated from an external system.</inlineHelpText>
        <label>Contract Migration External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>