force-app/main/default/objects/Contract/fields/CPI__c.field-meta.xml
<CustomField>
        <fullName>CPI__c</fullName>
        <label>CPI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US CPI-U</fullName>
                </value>
                <value>
                    <fullName>US CPI-U G&amp;S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>