force-app/main/default/objects/Contract/fields/CPI_Index_Type__c.field-meta.xml
<CustomField>
        <fullName>CPI_Index_Type__c</fullName>
        <label>CPI Index Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAP</fullName>
                </value>
                <value>
                    <fullName>FIX</fullName>
                </value>
                <value>
                    <fullName>No Increase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>