force-app/main/default/objects/Contract/fields/CPI_Term__c.field-meta.xml
<CustomField>
        <fullName>CPI_Term__c</fullName>
        <label>CPI Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apply Default CPI Term</fullName>
                </value>
                <value>
                    <fullName>Apply Customer’s Existing CPI Term</fullName>
                </value>
                <value>
                    <fullName>Non-Standard CPI Term</fullName>
                </value>
                <value>
                    <fullName>No Increase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>