force-app/main/default/objects/Contract/fields/Days_Remaining_Before_Renewal__c.field-meta.xml
<CustomField>
        <fullName>Days_Remaining_Before_Renewal__c</fullName>
        <formula>EndDate - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining Before Renewal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>