force-app/main/default/objects/Contract/fields/DocuSignId__c.field-meta.xml
<CustomField>
        <fullName>DocuSignId__c</fullName>
        <description>This is to hold the Id of the DocuSign Status record from which this Contract record is created.</description>
        <label>DocuSignId</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>