force-app/main/default/objects/Contract/fields/Failed_Auto_Renew__c.field-meta.xml
<CustomField>
        <fullName>Failed_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked if the Auto Renewal Failed</description>
        <inlineHelpText>Uncheck to have the nightly review process try again.</inlineHelpText>
        <label>Failed Auto Renew</label>
        <type>Checkbox</type>
    </CustomField>