force-app/main/default/objects/Contract/fields/Failed_Auto_Renew_Message__c.field-meta.xml
<CustomField>
        <fullName>Failed_Auto_Renew_Message__c</fullName>
        <description>The message received if the Auto-Renewal job fails.</description>
        <label>Failed Auto Renew Message</label>
        <type>TextArea</type>
    </CustomField>