force-app/main/default/objects/Contract/fields/Finastra_Entity__c.field-meta.xml
<CustomField>
    <fullName>Finastra_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RUBX-1173 Signing Entity</description>
    <label>Finastra Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>