force-app/main/default/objects/Contract/fields/License_Amount__c.field-meta.xml
<CustomField>
    <fullName>License_Amount__c</fullName>
    <description>RUBX-1172 ILF amount</description>
    <label>License Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>