force-app/main/default/objects/Contract/fields/Migrated_Record__c.field-meta.xml
<CustomField>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this record was migrated from an external system.</description>
        <inlineHelpText>Indicates this record was migrated from an external system.</inlineHelpText>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </CustomField>