force-app/main/default/objects/Contract/fields/Migrated_Renewal__c.field-meta.xml
<CustomField>
        <fullName>Migrated_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked only when this renewal is created from a Migrated Contract.  This field will be allow price editability on the renewal Quote.</description>
        <label>Migrated Renewal</label>
        <type>Checkbox</type>
    </CustomField>