force-app/main/default/objects/Contract/fields/Minimum_Rate__c.field-meta.xml
<CustomField>
        <fullName>Minimum_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>