force-app/main/default/objects/Contract/fields/Recurring_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Amount__c</fullName>
    <description>RUBX-1172 RLF Amount</description>
    <label>Recurring Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>