force-app/main/default/objects/Contract/fields/Renewal_Creation_Date__c.field-meta.xml
<CustomField>
        <fullName>Renewal_Creation_Date__c</fullName>
        <inlineHelpText>Date the renewal opportunity will be automatically created.</inlineHelpText>
        <label>Renewal Opp Creation Date</label>
        <type>Date</type>
    </CustomField>