force-app/main/default/objects/Contract/fields/Renewal_Quote_Creation__c.field-meta.xml
<CustomField>
        <fullName>Renewal_Quote_Creation__c</fullName>
        <description>Number of days before the contract end date that a renewal quote are automatically created.</description>
        <inlineHelpText>Number of days before the contract end date that a renewal quote are automatically created.</inlineHelpText>
        <label>Renewal Quote Creation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15 days in advance</fullName>
                </value>
                <value>
                    <fullName>30 days in advance</fullName>
                </value>
                <value>
                    <fullName>60 days in advance</fullName>
                </value>
                <value>
                    <fullName>90 days in advance</fullName>
                </value>
                <value>
                    <fullName>120 days in advance</fullName>
                </value>
                <value>
                    <fullName>180 days in advance</fullName>
                </value>
                <value>
                    <fullName>730 days in advance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>