force-app/main/default/objects/Contract/fields/Renewal_Quote_Creation_Date__c.field-meta.xml
<CustomField>
        <fullName>Renewal_Quote_Creation_Date__c</fullName>
        <description>Date the renewal Quote will be automatically created.</description>
        <inlineHelpText>Date the renewal Quote will be automatically created.</inlineHelpText>
        <label>Renewal Quote Creation Date</label>
        <type>Date</type>
    </CustomField>