force-app/main/default/objects/Contract/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RUBX-1173 Primary Sales Person</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>