force-app/main/default/objects/Contract/fields/SBQQ__ActiveContract__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ActiveContract__c</fullName>
        <description>Determines if this contract is in effect.</description>
        <formula>IF(AND(ISPICKVAL(StatusCode,&apos;Activated&apos;), OR(AND(Not(SBQQ__Evergreen__c),EndDate &gt; TODAY()), SBQQ__Evergreen__c)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if this contract is in effect.</inlineHelpText>
        <label>Active Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>