force-app/main/default/objects/Contract/fields/SBQQ__Evergreen__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Evergreen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the contract is evergreen.</description>
        <inlineHelpText>Indicates whether the contract is evergreen.</inlineHelpText>
        <label>Evergreen</label>
        <type>Checkbox</type>
    </CustomField>