force-app/main/default/objects/Contract/fields/Service_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Amount__c</fullName>
    <description>RUBX-1172 GS Amount</description>
    <label>Service Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>