force-app/main/default/objects/Contract/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RUBX-33 Ship to Address related to account</description>
    <label>Ship To Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Contracts (Ship To Address)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>