force-app/main/default/objects/Contract/fields/Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RUBX-1001 Shipping contact for invoices</description>
    <label>Shipping Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Shipping Contact)</relationshipLabel>
    <relationshipName>ShippingContracts</relationshipName>
    <type>Lookup</type>
</CustomField>