force-app/main/default/objects/Contract/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <description>RUBX-1173 TCV data field</description>
    <label>TCV</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>