force-app/main/default/objects/Contract/fields/Use_Existing_CPI__c.field-meta.xml
<CustomField>
        <fullName>Use_Existing_CPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Existing CPI</label>
        <type>Checkbox</type>
    </CustomField>