force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </ListView>